--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         TO DO: limit pages on pagination to 10
     -->
 
-    <div class="container">
-        <h1>Movie DB</h1>
+    <div class="container sticky-top bg-body-tertiary border-bottom pb-2">
         <div class="row">
-            <div class="col">
+            <div class="col"><h1>Wim's Movie DB</h1></div>
+            <div class="col pt-2">
                 <input type="text" id="search" name="search" placeholder="Search for a movie" value="godfather"
                     class="form-control">
             </div>
-            <div class="col">
+            <div class="col pt-2">
                 <button type="submit" id="btn-submit" class="btn btn-primary">Search movies</button>
             </div>
         </div>
@@ -39,10 +39,12 @@
         <div class="row">
             <div class="col" id="searchheader"></div>
         </div>
-        <div class="row">
-            <div class="col" id="pagination"></div>
-        </div>
+    </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col pt-2" id="pagination"></div>
+        </div>
         <div class="d-flex flex-wrap" id="results"></div>
     </div>
 
