add a spinner while fetching data

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
 
     <!-- 
-
-        TO DO: add a spinner while fetching data
+        TO DO: overall styling
     -->
 
     <div class="container sticky-top bg-body-tertiary border-bottom pb-2">
