--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <div class="container sticky-top bg-body-tertiary border-bottom pb-2">
         <div class="row">
-            <div class="col"><h1>Wim's Movie DB</h1></div>
-            <div class="col pt-2">
+            <div class="col-sm-12 col-md-4"><h1>Wim's Movie DB</h1></div>
+            <div class="col-sm-12 col-md-4 pt-2">
                 <input type="text" id="search" name="search" placeholder="Search for a movie" value="godfather"
                     class="form-control">
             </div>
-            <div class="col pt-2">
+            <div class="col-sm-12 col-md-4 pt-2">
                 <button type="submit" id="btn-submit" class="btn btn-primary">Search movies</button>
             </div>
         </div>
