Improved styling and mobile display

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         TO DO: overall styling
     -->
 
-    <div class="container sticky-top bg-body-tertiary border-bottom pb-2">
+    <div class="container sticky-top border-bottom pb-2 bg-dark rounded-bottom-4">
         <div class="row">
-            <div class="col-sm-12 col-md-4"><h1>Wim's Movie DB</h1></div>
+            <div class="col-sm-12 col-md-4"><h1 class="m-0 text-white">Wim's Movie DB</h1></div>
             <div class="col-sm-12 col-md-4 pt-2">
                 <input type="text" id="search" name="search" placeholder="Search for a movie" value="godfather"
                     class="form-control">
